# claude-slack-bridge

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  bridge.py  i18n.py  pyproject.toml  requirements.txt  slack-app-manifest.yml  test_tool_rejection.sh
docs/: cli-fork-consideration.md  multi-machine-setup.md  setup-guide.md
scripts/: install.sh  launch.sh  restart.sh  start.sh  stop.sh
tests/: conftest.py  test_access_control.py  test_data_models.py  test_i18n.py  test_parsers.py  test_text_processing.py
