[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-slack-bridge"
version = "0.1.0"
description = "Mac上で動くClaude CodeをSlack DMから監視・操作するブリッジ"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
claude-slack-bridge = "bridge:main"
