[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-slack-bridge"
version = "0.1.0"
description = "Slackからclaude CLIを操作するブリッジ（macOS）"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "nariakiiwatani" },
]
keywords = ["claude", "slack", "bridge", "cli", "macos", "automation"]
dependencies = [
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
claude-slack-bridge = "bridge:main"

[project.urls]
Homepage = "https://github.com/nariakiiwatani/claude-slack-bridge"
Repository = "https://github.com/nariakiiwatani/claude-slack-bridge"
Issues = "https://github.com/nariakiiwatani/claude-slack-bridge/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
